Fix bug with BoxerView images on smaller screens

--- a/src/components/ScheduleView.css
+++ b/src/components/ScheduleView.css
@@ -11,7 +11,8 @@
   .fight-cards {
     width: 80%;
   }
-  img {
+
+  .boxer-data > img {
     width:80%;
     height:90%;
   }
